--- a/{{cookiecutter.project_name}}/.gitpod.yml
+++ b/{{cookiecutter.project_name}}/.gitpod.yml
@@ -18,4 +18,4 @@ ports:
 
 tasks:
   - init:
-      export PIP_USER=no && poetry install
+      export PIP_USER=no && poetry install && nox -s pre-commit -- install
