--- a/{{cookiecutter.project_name}}/.gitpod.yml
+++ b/{{cookiecutter.project_name}}/.gitpod.yml
@@ -17,5 +17,6 @@ ports:
     onOpen: notify
 
 tasks:
-  - init:
+  - before: pyenv install miniconda3-3.9.1 && pyenv global miniconda3-3.9.1
+    init:
       export PIP_USER=no && poetry install && nox -s pre-commit -- install
